keep updating charts. fixed officecontext weather widget and styling. added calendar reporting timezone
